--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  breadcrumbs: ^0.1.0
+  webview_flutter: ^4.10.0
+  http: ^1.3.0
+  shared_preferences: ^2.3.5
+  webview_flutter_android: ^4.3.1
 
 dev_dependencies:
   flutter_test:
